--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "anshuman",
   "license": "MIT",
   "dependencies": {
+    "apollo-server": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
@@ -20,7 +21,9 @@
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.3",
     "nodemon": "^2.0.19",
     "yup": "^0.32.11"
