--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.3",
+    "mongoose-paginate-v2": "^1.7.0",
     "nodemon": "^2.0.19",
     "yup": "^0.32.11"
   }
